--- a/express/.env
+++ b/express/.env
@@ -1,1 +1,2 @@
-PORT=3000
+PORT=3333
+MONGODB_URI="mongodb+srv://princeco10673:PU4VhhkDGxhpPnXs@cluster0.tgqllsc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
